kubernetes/apps/base/arr/qbittorrent-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.4
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: bittorrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: bittorrent-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: qbittorrent-config-storage
            - mountPath: /config/qBittorrent/qBittorrent.conf
              name: qbittorrent-config
              readOnly: true
              subPath: qBittorrent.conf
            - mountPath: /downloads
              name: qbittorrent-downloads
      volumes:
        - name: qbittorrent-config-storage
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: qbittorrent-config
          configMap:
            name: qbittorrent-config
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
