kubernetes/apps/base/arr/qbittorrent-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: qbittorrent
