kubernetes/apps/base/arr/qbittorrent-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer-production
    external-dns.alpha.kubernetes.io/hostname: qbit.skwig.party
    external-dns.alpha.kubernetes.io/target: 192.168.100.47
spec:
  ingressClassName: nginx
  rules:
    - host: qbit.skwig.party
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
  tls:
    - secretName: qbit-skwig-party-tls
      hosts:
        - qbit.skwig.party
